--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "turanjanin/receipts",
+    "name": "turanjanin/serbian-fiscal-receipts-parser",
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -11,23 +11,33 @@
     ],
     "autoload": {
         "psr-4": {
-            "Turanjanin\\Receipts\\": "src/"
+            "Turanjanin\\FiscalReceipts\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Turanjanin\\Receipts\\Tests\\": "tests/"
+            "Turanjanin\\FiscalReceipts\\Tests\\": "tests/"
         }
     },
     "require": {
         "php": "^8.1",
         "ext-mbstring": "*",
-        "gravitypdf/querypath": "^3.2"
+        "gravitypdf/querypath": "^3.2",
+        "php-http/discovery": "^1.17",
+        "psr/http-client": "^1.0",
+        "psr/http-client-implementation": "*",
+        "psr/http-factory": "^1.0",
+        "psr/http-factory-implementation": "*"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "php-http/discovery": false
+        }
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "guzzlehttp/guzzle": "^7.7",
+        "guzzlehttp/psr7": "^2.5",
+        "phpunit/phpunit": "^10"
     }
 }
